# baikal-template

./: .env.example  .flake8  .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: pipeline.yml
